@@ -34,10 +34,10 @@
 typedef unsigned int MD5_u32plus;
 
 typedef struct {
-	MD5_u32plus lo, hi;
-	MD5_u32plus a, b, c, d;
-	unsigned char buffer[64];
-	MD5_u32plus block[16];
+        MD5_u32plus lo, hi;
+        MD5_u32plus a, b, c, d;
+        unsigned char buffer[64];
+        MD5_u32plus block[16];
 } MD5_CTX;
 
 OpenDDS_Rtps_Export void MD5_Init(MD5_CTX *ctx);
